# pokemon-ml-design

./: .gitignore  README.md  main.py  pyproject.toml
pokemon_ml_design/: actions.py  evaluate.py  model.py  pokemon.py  policy.py  synthesize_data.py
resources/input/: pokemon.csv
