[tool.poetry]
name = "pokemon-ml-design"
version = "0.1.0"
description = ""
authors = ["Teppei Kanayama <kanayama.teppei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
obp = "0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
